# medmnemonic

./: .dockerignore  .gitignore  App.tsx  README.md  docker-compose.yml  index.html  metadata.json  package-lock.json  package.json  render.yaml  types.ts
.agent/workflows/: deploy_to_modal.md
backend/: Dockerfile  README.md  medmnemonic.db  modal_app.py  openapi.yaml  pyproject.toml
backend/app/: auth.py  crud.py  database.py  main.py  models.py  prompt.py  sql_models.py
backend/app/routers/: admin.py  ai.py  auth.py  curriculum.py  playlists.py  stories.py
backend/scripts/: promote_user.py  test_gemini.py
backend/tests/: test_ai_quiz.py  test_api.py  test_curriculum.py
backend/tests_integration/: conftest.py  test_auth_integration.py  test_stories_integration.py
components/: ImageDisplay.tsx  InputForm.tsx  LearningPath.tsx  QuizMode.tsx  StoryDisplay.tsx
frontend/: App.tsx  index.html  nginx.conf  package-lock.json  package.json  types.ts
frontend/components/: AdminDashboard.tsx  AuthModal.tsx  ErrorBoundary.tsx  FactsReview.tsx  LearningPath.tsx  Library.tsx  PlanReview.tsx  QuizMode.tsx
frontend/services/: api.ts  geminiService.ts
services/: geminiService.ts  srsService.ts
